# get-youtube-transcripts

./: README.md  pyproject.toml  yt_videos_by_channel_nofilter.json
data/: output_yt_videos.csv  transcript_download_report.txt  yt_fail.json  yt_success.json
data/transcripts/: KUCC00OZNE4.txt  RFrujcdhqI4.txt  ROTO57ciZ58_part3.txt  ROTO57ciZ58_part4.txt  xODRAJDc6pI.txt
docs/: comparison_tts_stt.md  install_config.md  prompts.md
src/: config.yaml  config_ver1.yaml  step1_get_yt_all.py  step1_get_yt_all_ver1.py  step1_get_yt_api.py  step1_get_yt_api_ver1.py  step1_get_yt_api_ver2.py  step1_get_yt_api_ver3.py  test_gpu.py  test_gpu_whisper.py  util_audio2text._ver1py  util_audio2text.py  util_move_big_files.py  util_step1_get_channel_video_ids.py  util_step1_get_channel_video_ids_filters.py  util_step1_get_channel_video_ids_filters_ver1.py  util_step1_get_channel_video_ids_nofilters.py  yt_channels.csv  yt_videos.csv
temp/: 8n_tpLn6Xbo.en.vtt  uP2hW3tv3Po.en.vtt
