[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-transcript-scraper"
version = "0.1.0"
description = "A utility to download transcripts from YouTube videos"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
    "numpy>=1.24.0",
    "google-api-python-client>=2.86.0",
    "youtube-transcript-api>=0.6.0",
    "yt-dlp>=2023.3.4",
    "fake-useragent>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pytest",
]

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py38"]